--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -8,7 +8,7 @@ contact_links:
      about: The Offical SwitchBot Facebook Page.
   - name: Twitter @SwitchBot
      url: https://twitter.com/switchbot
-     about: The Offical SwitchBot Twitter Account.
+     about: The Offical SwitchBot Twitter.
   - name: Homebridge Discord Channel for SwitchBot
     url: https://discord.gg/5wYTbwP4ha
     about: Feel free to ask questions here.
