--- a/.github/workflows/dependepot-auotmerge.yml
+++ b/.github/workflows/dependepot-auotmerge.yml
@@ -6,7 +6,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      ...
+      - uses: actions/checkout@v2.3.4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2.1.4
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: npm install, build and test
+        run: |
+          npm install
+          npm run lint
+          npm run build
+        env:
+          CI: true
 
   automerge:
     needs: build
