--- a/package.json
+++ b/package.json
@@ -1,14 +1,9 @@
 {
   "name": "@switchbot/homebridge-switchbot-ble",
-  "version": "1.2.8",
+  "version": "1.2.9",
   "description": "Homebridge integration for SwitchBot BLE series products",
   "author": "SwitchBot <support@wondertechlabs.com> (https://github.com/SwitchBot)",
   "license": "ISC",
-  "files": [
-    "LICENSE",
-    "dist",
-    "config.schema.json"
-  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/SwitchBot/homebridge-switchbot-ble.git"
@@ -24,6 +19,7 @@
   "scripts": {
     "lint": "eslint src/**.ts",
     "update": "npm update && npm install",
+    "audit": "npm audit fix",
     "watch": "npm run build && npm link && nodemon",
     "build": "rimraf ./dist && tsc",
     "prepublishOnly": "npm run lint && npm run build"
