--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@switchbot/homebridge-switchbot-ble",
-  "version": "1.2.9",
+  "version": "1.2.10",
   "description": "Homebridge integration for SwitchBot BLE series products",
   "author": "SwitchBot <support@wondertechlabs.com> (https://github.com/SwitchBot)",
   "license": "ISC",
@@ -17,9 +17,8 @@
   },
   "main": "dist/switchbot-platform.js",
   "scripts": {
+    "audit": "npm update && npm audit fix",
     "lint": "eslint src/**.ts",
-    "update": "npm update && npm install",
-    "audit": "npm audit fix",
     "watch": "npm run build && npm link && nodemon",
     "build": "rimraf ./dist && tsc",
     "prepublishOnly": "npm run lint && npm run build"
@@ -33,13 +32,13 @@
     "ble"
   ],
   "devDependencies": {
-    "@types/node": "^14.14.22",
-    "@typescript-eslint/eslint-plugin": "^4.14.0",
-    "@typescript-eslint/parser": "^4.14.0",
-    "eslint": "^7.18.0",
+    "@types/node": "^14.14.30",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
+    "eslint": "^7.20.0",
     "eslint-plugin-prettier": "^3.3.1",
     "homebridge": "^1.1.7",
-    "homebridge-config-ui-x": "^4.36.0",
+    "homebridge-config-ui-x": "^4.39.0",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
@@ -47,7 +46,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "@abandonware/noble": "^1.9.2-10",
+    "@abandonware/noble": "^1.9.2-11",
     "node-switchbot": "1.0.0"
   }
 }
