--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@switchbot/homebridge-switchbot-ble",
-  "version": "1.2.10",
+  "version": "1.3.0",
   "description": "Homebridge integration for SwitchBot BLE series products",
   "author": "SwitchBot <support@wondertechlabs.com> (https://github.com/SwitchBot)",
   "license": "ISC",
@@ -13,11 +13,12 @@
   },
   "homepage": "https://github.com/SwitchBot/homebridge-switchbot-ble#readme",
   "engines": {
-    "homebridge": ">=1.0.0"
+    "node": ">=14.17.1",
+    "homebridge": ">=1.3.4"
   },
   "main": "dist/switchbot-platform.js",
   "scripts": {
-    "audit": "npm update && npm audit fix",
+    "update": "npm update",
     "lint": "eslint src/**.ts",
     "watch": "npm run build && npm link && nodemon",
     "build": "rimraf ./dist && tsc",
@@ -32,21 +33,18 @@
     "ble"
   ],
   "devDependencies": {
-    "@types/node": "^14.14.30",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
-    "eslint": "^7.20.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "homebridge": "^1.1.7",
-    "homebridge-config-ui-x": "^4.39.0",
-    "nodemon": "^2.0.7",
-    "prettier": "^2.2.1",
+    "@types/node": "^16.3.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
+    "eslint": "^7.30.0",
+    "homebridge": "^1.3.4",
+    "nodemon": "^2.0.8",
     "rimraf": "^3.0.2",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "ts-node": "^10.0.0",
+    "typescript": "^4.3.5"
   },
   "dependencies": {
-    "@abandonware/noble": "^1.9.2-11",
+    "@abandonware/noble": "^1.9.2-14",
     "node-switchbot": "1.0.0"
   }
 }
