--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@switchbot/homebridge-switchbot-ble",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "Homebridge integration for SwitchBot BLE series products",
   "author": "SwitchBot <support@wondertechlabs.com> (https://github.com/SwitchBot)",
   "license": "ISC",
@@ -13,12 +13,12 @@
   },
   "homepage": "https://github.com/SwitchBot/homebridge-switchbot-ble#readme",
   "engines": {
-    "node": ">=14.17.1",
+    "node": ">=14.17.3",
     "homebridge": ">=1.3.4"
   },
   "main": "dist/switchbot-platform.js",
   "scripts": {
-    "update": "npm update",
+    "update": "npm install && npm update",
     "lint": "eslint src/**.ts",
     "watch": "npm run build && npm link && nodemon",
     "build": "rimraf ./dist && tsc",
@@ -33,14 +33,14 @@
     "ble"
   ],
   "devDependencies": {
-    "@types/node": "^16.3.1",
-    "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "@typescript-eslint/parser": "^4.28.3",
-    "eslint": "^7.30.0",
+    "@types/node": "^16.4.3",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
+    "eslint": "^7.31.0",
     "homebridge": "^1.3.4",
-    "nodemon": "^2.0.8",
+    "nodemon": "^2.0.12",
     "rimraf": "^3.0.2",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
