--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@switchbot/homebridge-switchbot-ble",
-  "version": "1.4.0",
+  "version": "1.4.1",
   "description": "Homebridge integration for SwitchBot BLE series products",
   "author": "SwitchBot <support@wondertechlabs.com> (https://github.com/SwitchBot)",
   "license": "ISC",
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "@abandonware/noble": "^1.9.2-14",
-    "node-switchbot": "1.0.0"
+    "node-switchbot": "1.0.0",
+    "@homebridge/plugin-ui-utils": "0.0.19"
   }
 }
