--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@switchbot/homebridge-switchbot-ble",
+  "displayName": "Homebridge SwitchBot BLE",
   "version": "1.6.1",
   "description": "Homebridge integration for SwitchBot BLE series products",
   "author": "SwitchBot <support@wondertechlabs.com> (https://github.com/SwitchBot)",
