--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@eweiss/homebridge-switchbot-ble",
-  "displayName": "Homebridge SwitchBot BLE (@ewebdev Experiment)",
+  "displayName": "Homebridge SwitchBot BLE - @ewebdev Experiment",
   "version": "1.6.2",
   "description": "Experimental Homebridge integration for SwitchBot BLE series products",
   "author": "Eyal Weiss <eyal1w@gmail.com> (https://github.com/ewebdev)",
